--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ packages = [
 python = ">=3.7.1,<4.0"
 faker = "^15.3.4"
 pandas = "1.3.5"
+pre-commit = "^2.21.0"
 
 [tool.pylint.format]
 max-line-length = "88"
