Add poetry dev dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,40 @@ faker = "^15.3.4"
 pandas = "1.3.5"
 pre-commit = "^2.21.0"
 
+[tool.poetry.dev-dependencies]
+anybadge = "*"
+autoflake = "*"
+black = "*"
+flake8 = "*"
+flake8-bugbear = "*"
+flake8-builtins = "*"
+flake8-comprehensions = "*"
+flake8-debugger = "*"
+flake8-eradicate = "*"
+flake8-logging-format = "*"
+genbadge = "*"
+isort = "*"
+make = "*"
+mkdocs = "*"
+mkdocstrings = "*"
+mkdocs-material = "*"
+mypy = "*"
+pep8-naming = "*"
+pre-commit = "*"
+pymdown-extensions = "*"
+pylint = "*"
+pytest = "*"
+pytest-github-actions-annotate-failures = "*"
+pytest-cov = "*"
+python-kacl = "*"
+pyupgrade = "*"
+redcaprecordsynthesizer = {git = "https://github.com/DBMI/REDCapRecordSynthesizer.git", rev="main"}
+sphinx = "*"
+sphinx_markdown_builder = "*"
+tryceratops = "*"
+typing = "*"
+wheel = "*"
+
 [tool.pylint.format]
 max-line-length = "88"
 
