--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/python-poetry-env
-      - run: poetry run pre-commit run -files src/redcap_record_synthesizer/*.py
+      - run: poetry run pre-commit run --files src/redcap_record_synthesizer/*.py
 
   test:
     runs-on: ubuntu-latest
