--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,19 +19,19 @@ repos:
     hooks:
       - id: autoflake
         name: autoflake
-        entry: poetry run autoflake -r --remove-all-unused-imports --remove-unused-variables src/redcap_record_synthesizer
+        entry: poetry run autoflake -r --remove-all-unused-imports --remove-unused-variables src
         files: "py$"
         language: system
         types: [python]
       - id: isort
         name: isort
-        entry: poetry run isort src/redcap_record_synthesizer
+        entry: poetry run isort src
         files: "py$"
         language: system
         types: [python]
       - id: black
         name: black
-        entry: poetry run black src/redcap_record_synthesizer
+        entry: poetry run black src
         files: "py$"
         language: system
         types: [python]
@@ -42,7 +42,7 @@ repos:
         types: [python]
       - id: mypy
         name: mypy
-        entry: poetry run mypy src/redcap_record_synthesizer
+        entry: poetry run mypy src
         require_serial: true
         files: "py$"
         language: python
@@ -51,7 +51,7 @@ repos:
         pass_filenames: false
       - id: flake8
         name: flake8
-        entry: poetry run flake8 src/redcap_record_synthesizer
+        entry: poetry run flake8 src
         files: "py$"
         language: system
         types: [python]
