--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ disable_error_code = ["call-arg", "call-overload", "import", "var-annotated"]
 
 [tool.poetry]
 name = "REDCapRecordSynthesizer"
-version = "0.4.3"
+version = "0.5.0"
 description = "Creates synthetic REDCap-like records for software testing."
 authors = ["Kevin J. Delaney <kjdelaney@ucsd.edu>"]
 readme = "README.md"
@@ -41,7 +41,6 @@ homepage = "https://github.com/DBMI/REDCapRecordSynthesizer"
 repository = "https://github.com/DBMI/REDCapRecordSynthesizer"
 
 packages = [
-    { include = "nickname_lookup", from = "src"},
     { include = "redcap_record_synthesizer", from = "src" }
 ]
 
@@ -92,5 +91,5 @@ addopts = """\
     --cov-report term-missing \
     --no-cov-on-fail \
 """
-pythonpath = [".", "src", "src/nickname_lookup", "src/redcap_record_synthesizer"]
-testpaths= ["nickname_lookup", "redcap_record_synthesizer"]
+pythonpath = [".", "src", "src/redcap_record_synthesizer"]
+testpaths= ["redcap_record_synthesizer"]
