--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ disable_error_code = ["call-arg", "call-overload", "import", "var-annotated"]
 
 [tool.poetry]
 name = "REDCapRecordSynthesizer"
-version = "0.5.8"
+version = "0.5.9"
 description = "Creates synthetic REDCap-like records for software testing."
 authors = ["Kevin J. Delaney <kjdelaney@ucsd.edu>"]
 readme = "README.md"
@@ -49,6 +49,7 @@ python = ">=3.7.1,<4.0"
 faker = "^15.3.4"
 pandas = "1.3.5"
 pre-commit = "^2.21.0"
+redcaputilities = {git = "https://github.com/DBMI/REDCapUtilities.git"}
 
 [tool.poetry.dev-dependencies]
 anybadge = "*"
