--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
-target-version = ["py37", "py38", "py39"]
+target-version = ["py312"]
 include = '\.pyi?$'
 
 [tool.coverage.report]
@@ -31,7 +31,7 @@ disable_error_code = ["call-arg", "call-overload", "import", "var-annotated"]
 
 [tool.poetry]
 name = "REDCapRecordSynthesizer"
-version = "0.6.1"
+version = "1.0.0"
 description = "Creates synthetic REDCap-like records for software testing."
 authors = ["Kevin J. Delaney <kjdelaney@ucsd.edu>"]
 readme = "README.md"
@@ -47,7 +47,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0"
 faker = "^15.3.4"
-pandas = "1.3.5"
+pandas = ">=2.2.0"
 pre-commit = "^2.21.0"
 redcaputilities = {git = "https://github.com/DBMI/REDCapUtilities.git"}
 
